feat(): changed plugins according to new mmo plugin system

--- a/gen-grpc-gateway/Dockerfile
+++ b/gen-grpc-gateway/Dockerfile
@@ -20,3 +20,5 @@ RUN go get -u github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway
 
 ADD hooks/* /hooks/
 ADD mmo-plugin.yaml /plugin/mmo-plugin.yaml
+
+ENTRYPOINT ["/hooks/gen.sh"]
