--- a/gen-interfaces/Dockerfile
+++ b/gen-interfaces/Dockerfile
@@ -4,3 +4,4 @@ ADD intrfcs.go /go/src/intrfc.go
 ADD mmo-plugin.yaml /plugin/mmo-plugin.yaml
 
 RUN go build -o /hooks/intrfc /go/src/intrfc.go
+ENTRYPOINT ["/hooks/intrfc"]
