feat(): upgraded plugins according to beta mmo requirements

--- a/gen-angular-client/Dockerfile
+++ b/gen-angular-client/Dockerfile
@@ -1,9 +1,7 @@
 FROM node
 
-RUN git clone https://github.com/flowup/ngx-swagger-client-generator /ngx-swagger && cd /ngx-swagger && yarn
+RUN yarn global add @flowup/ngx-swagger-client-generator
 ADD gen.sh /ngx-swagger/gen.sh
-
-WORKDIR /ngx-swagger
 
 ENTRYPOINT ["/ngx-swagger/gen.sh"]
 
