fix(api-client-generator): alpha version

--- a/gen-angular-client/Dockerfile
+++ b/gen-angular-client/Dockerfile
@@ -1,6 +1,6 @@
 FROM node
 
-RUN yarn global add @flowup/ngx-swagger-client-generator
+RUN yarn global add npm i api-client-generator@3.0.0-alpha.0
 ADD gen.sh /ngx-swagger/gen.sh
 
 ENTRYPOINT ["/ngx-swagger/gen.sh"]
