feat(upgrade): upgraded images to version 1.4.0

--- a/gen-angular-client/Dockerfile
+++ b/gen-angular-client/Dockerfile
@@ -1,6 +1,6 @@
-FROM node
+FROM node:10
 
-RUN yarn global add npm i api-client-generator@3.0.0-alpha.1
+RUN yarn global add npm i api-client-generator@4.0.1
 ADD gen.sh /ngx-swagger/gen.sh
 
 ENTRYPOINT ["/ngx-swagger/gen.sh"]
